--- a/views/index.html
+++ b/views/index.html
@@ -61,22 +61,6 @@
 
 
     <main>
-        <section class="marcas">
-            <div class="title">
-                <h2 class="linea"><span>COMPRÁ POR MARCA</span></h2>
-            </div>
-            <div class="images padding">
-                <i class="fas fa-chevron-left previous icons-marca"></i>
-                <img src="images/marca-nike.png" alt="Nike" class="marca_img">
-                <img src="images/marca-adidas.png" alt="Adidas" class="marca_img">
-                <img src="images/marca-puma.png" alt="Puma" class="marca_img">
-                <img src="images/marca-converse.png" alt="Converse" class="marca_img none">
-                <img src="images/marca-vans.png" alt="Vans" class="marca_img none1">
-                <img src="images/marca-newbalance.png" alt="Newbalance" class="marca_img none1">
-                <i class="fas fa-chevron-right next icons-marca"></i>
-            </div>
-
-        </section>
 
         <section class="zapatillas">
             <div class="title">
@@ -115,9 +99,28 @@
                     </div>
                 </article>
         </section>
+
         <div class="dots1">
             <i class="fas fa-ellipsis-h centrado"></i>
         </div>
+        
+        <section class="marcas">
+            <div class="title">
+                <h2 class="linea"><span>COMPRÁ POR MARCA</span></h2>
+            </div>
+            <div class="images padding">
+                <i class="fas fa-chevron-left previous icons-marca"></i>
+                <img src="images/marca-nike.png" alt="Nike" class="marca_img">
+                <img src="images/marca-adidas.png" alt="Adidas" class="marca_img">
+                <img src="images/marca-puma.png" alt="Puma" class="marca_img">
+                <img src="images/marca-converse.png" alt="Converse" class="marca_img none">
+                <img src="images/marca-vans.png" alt="Vans" class="marca_img none1">
+                <img src="images/marca-newbalance.png" alt="Newbalance" class="marca_img none1">
+                <i class="fas fa-chevron-right next icons-marca"></i>
+            </div>
+
+        </section>
+
 
         <div class="medios-pago">
             <div class="titulo-medios">MEDIOS DE PAGO</div>
@@ -147,41 +150,42 @@
     <footer>
 
         <section>
-            
-        <div class="main-footer">
-            <article class="footer-article">
-            <h4 class="titulo">INSTITUCIONAL<i class="fas fa-chevron-down none2"></i></h4>
-            <div class="italic center gris-oscuro padding">
-                <ul class="footer">
-                    <li><a href="#" class="linkfooter">Quienes somos</a></li>
-                    <li><a href="#" class="linkfooter">Politicas de privacidad</a></li>
-                    <li><a href="#" class="linkfooter">Terminos y condiciones</a></li>
-                </ul>
+
+            <div class="main-footer">
+                <article class="footer-article">
+                    <h4 class="titulo">INSTITUCIONAL<i class="fas fa-chevron-down none2"></i></h4>
+                    <div class="italic center gris-oscuro padding">
+                        <ul class="footer">
+                            <li><a href="#" class="linkfooter">Quienes somos</a></li>
+                            <li><a href="#" class="linkfooter">Politicas de privacidad</a></li>
+                            <li><a href="#" class="linkfooter">Terminos y condiciones</a></li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="footer-article">
+                    <h4 class="titulo">AYUDA<i class="fas fa-chevron-down none2"></i></h4>
+                    <div class="italic center gris-oscuro padding">
+                        <ul class="footer">
+                            <li><a href="#" class="linkfooter">Preguntas frecuentes</a></li>
+                            <li><a href="#" class="linkfooter">Sucursales</a></li>
+                            <li><a href="#" class="linkfooter">Pagos</a></li>
+                            <li><a href="#" class="linkfooter">Entregas</a></li>
+                            <li><a href="#" class="linkfooter">Cambios</a></li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="footer-article">
+                    <h4 class="titulo">CONTACTO<i class="fas fa-chevron-down icon-title none2"></i></h4>
+                    <div class="italic">
+                        <ul class="footer">
+                            <li><a href="" class="linkfooter">0800-888-8888</a></li>
+                            <li><a href="" class="linkfooter">Lunes a Sábado de 9 a 18 hs</a></li>
+                            <li><a href="#" class="linkfooter"><i class="far fa-envelope "></i>Envianos un mensaje</a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
             </div>
-        </article>
-        <article class="footer-article">
-            <h4 class="titulo">AYUDA<i class="fas fa-chevron-down none2"></i></h4>
-            <div class="italic center gris-oscuro padding">
-                <ul class="footer">
-                    <li><a href="#" class="linkfooter">Preguntas frecuentes</a></li>
-                    <li><a href="#" class="linkfooter">Sucursales</a></li>
-                    <li><a href="#" class="linkfooter">Pagos</a></li>
-                    <li><a href="#" class="linkfooter">Entregas</a></li>
-                    <li><a href="#" class="linkfooter">Cambios</a></li>
-                </ul>
-            </div>
-        </article>
-        <article class="footer-article">
-            <h4 class="titulo">CONTACTO<i class="fas fa-chevron-down icon-title none2"></i></h4>
-            <div class="italic">
-                <ul class="footer">
-                    <li><a href="" class="linkfooter">0800-888-8888</a></li>
-                    <li><a href="" class="linkfooter">Lunes a Sábado de 9 a 18 hs</a></li>
-                    <li><a href="#" class="linkfooter"><i class="far fa-envelope "></i>Envianos un mensaje</a></li>
-                </ul>
-            </div>
-        </article>
-        </div>
 
             <br />
 
