--- a/views/productCart.html
+++ b/views/productCart.html
@@ -28,17 +28,7 @@
             </form>
         </div>
         
-        <nav class="header-bottom-bar">
-            <ul>
-                <li><a href="#" class="linknav">HOMBRE</a></li>
-                <li><a href="#" class="linknav">MUJER</a></li>
-                <li><a href="#" class="linknav">NIÑO</a></li>
-                <li><a href="#" class="linknav">DEPORTES</a></li>
-                <li><a href="#" class="linknav">MARCAS</a></li>
-            </ul>
-
-        </nav>
-
+        
     </header>
 
     <main>
@@ -55,7 +45,7 @@
             </div>
             <article class="producto">
                 <img src="/images/new-balance3.png" alt="NEW BALANCE 997" class="miniatura">
-                <div class="modelo">NEW BALANCE 997 SPORT CHINESE NEW YEAR / TALLE 36</div>
+                <div class="modelo">NEW BALANCE 997 SPORT CHINESE N.Y / TALLE 36</div>
                 <div class="precio">PRECIO $15.799</div>
                 <form action="/productCart" method="GET" class="form-cantidad">
                     <label for="cantidad">u.</label>
