--- a/public/css/styles-santi.css
+++ b/public/css/styles-santi.css
@@ -8,6 +8,60 @@ body{
   font-family: "Roboto";
   background-color: #ffffff;  
 }
+.header-top-bar{
+    background-color: #222021  ;
+    padding-top: 10px;
+}
+.header-top-bar{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: center;
+}
+.home{
+    width: 30%;
+}
+.search-form{
+    display: flex;
+    align-self: center;
+    width: 50%;
+    justify-content: center;
+}
+
+.campo-busqueda{
+    text-align: center;
+    font-size: 12px;
+    border: none;
+    font-family: roboto;
+    padding:8px;
+    width: 85%;
+    border-bottom: solid 3px #222021 ;
+}
+.search-button{
+    font-size: 12px;
+    border: none;
+    padding: 8px;
+    background-color: white;
+    width:15%;
+    border-bottom: solid 3px #222021 ;   
+}
+.header-bottom-bar{
+    padding:10px;
+    border-bottom: solid 2px#222021 ;
+    display: none;
+}
+
+.header-bottom-bar ul{ 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    list-style: none;
+    }
+.linknav{
+    color: black;
+    text-decoration: none;
+    font-size: 12px;
+}
 
 .main-nav{
     background-color: #000000;
@@ -16,7 +70,20 @@ body{
 }
 
 .logo{
-    width: 100px;
+    width: 100%;
+    margin-bottom: 10px;
+}
+.icons-section{
+    width: 30%;
+    align-self: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+.icons-section i{
+    padding: 0px 5px;
+    color:#ffffff;
+    font-size: 18px;
 }
 
 .items{
@@ -189,6 +256,41 @@ footer{
 .contacto{
     padding: 5px;
 }
+.arriba{
+    background-color: #f2e4bb;
+    text-align: center;
+    border-bottom: solid 2px #f2e4bb;
+    border-radius: 2px;
+    padding: 7px;
+}
+.contenedor-menu{
+    width: 30%;
+    align-self: center;
+    display: flex;
+    justify-content: center;
+}
+.footer-article{
+    display: block;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 20px;
+}
+.titulo{
+    padding: 15px; 
+}
+footer{
+    background-color: #222021;
+    color: white; 
+}
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border-bottom: dotted 1px #ffffff;
+}
+
 
 @media (min-width:478px) {
     .nav-categorias{
@@ -250,10 +352,49 @@ footer{
     .logofooter{
         width: 20%;
     }
+    .menu-desplegable{
+        font-size: 16px;
+        background-color:#d97f11;
+        padding: 5px;
+        border-radius: 5px;
+        width: 30px;
+        text-align: center;
+        color: white;
+        align-self: center;
+        margin-top: 10px;
+    }
+    
 
 }
 
 @media (min-width:768px) {
+    .main-header{
+        padding:10px
+    }
+    .contenedor-menu{
+        display: none;
+    }
+    .titulo{
+        text-align: center;
+    }
+    .search-form{
+        width:50%;
+        order: 1;
+    }
+    .none2{
+        display: none;
+    }
+    .header-bottom-bar{
+        display: block;
+    }
+    .main-footer{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
+    .header-top-bar{
+        justify-content: space-around;
+    }
     
     .main-article,.items,.search-bar{
         justify-content: space-between;
@@ -286,4 +427,13 @@ footer{
     .logofooter{
         width: 10%;
     }
+    .icons-section{
+        order:2;
+        width: 10%;
+    }
+    @media (min-width: 1200px){
+        .logo{
+            width: 65%;
+        }
+}
 }
