--- a/public/css/styles-seba.css
+++ b/public/css/styles-seba.css
@@ -19,6 +19,10 @@ body{
 }
 
 .header-top-bar{
+    background-color: #222021  ;
+    padding-top: 10px;
+}
+.header-top-bar{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -41,7 +45,7 @@ body{
 }
 .icons-section i{
     padding: 0px 5px;
-    color:black;
+    color: #ffffff;
     font-size: 18px;
    
 }
@@ -60,6 +64,7 @@ body{
     font-family: roboto;
     padding:8px;
     width: 85%;
+    border-bottom: solid 3px #222021 ;
 }
 .search-button{
     font-size: 12px;
@@ -67,7 +72,7 @@ body{
     padding: 8px;
     background-color: white;
     width:15%;
-    
+    border-bottom: solid 3px #222021 ;   
 }
 
 .contenedor-menu{
@@ -91,12 +96,9 @@ body{
 
 
 .header-bottom-bar{
-    padding:5px;
-    margin-top: 10px; 
-    background-color:#f2e4bb ;
-    border-top: solid 1px #d97f11;
+    padding:10px;
+    border-bottom: solid 2px#222021 ;
     display: none;
-    
 }
 
 .header-bottom-bar ul{ 
@@ -109,7 +111,6 @@ body{
     color: black;
     text-decoration: none;
     font-size: 12px;
-    
 }
 
 /*estilos main*/
@@ -395,7 +396,34 @@ width: 80%;
     width: 30%;
     margin:auto;
 }
-
+.arriba{
+    background-color: #f2e4bb;
+    text-align: center;
+    border-bottom: solid 2px #f2e4bb;
+    border-radius: 2px;
+    padding: 7px;
+}
+.footer-article{
+    display: block;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 20px;
+}
+.titulo{
+    padding: 15px; 
+}
+footer{
+    background-color: #222021;
+    color: white; 
+}
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border-bottom: dotted 1px #ffffff;
+}
 /*paleta{
 azulverde: #2D5955;
 crema: #f2e4bb;
@@ -445,14 +473,30 @@ hr{
 
 @media (min-width:768px){
 .main-header{
-    padding:10px
-}
+        padding:10px
+    }
+    .footer{
+        border: none;
+        list-style-type: none;
+    }
+    
 .header-top-bar{
     justify-content: space-around;
+}
+.titulo{
+    text-align: center;
+}
+.none2{
+    display: none;
 }
 .header-bottom-bar{
     display: block;
     
+}
+.main-footer{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
 
 .contenedor-menu{
@@ -533,5 +577,11 @@ h2{
 }
 .register-form hr{
     margin-top: 20px;
+}
+
+@media (min-width: 1200px){
+    .logo{
+        width: 65%;
+    }
 }
 }
