Adjunto las reglas del productDetail al css comunitario

--- a/public/css/styles-santi.css
+++ b/public/css/styles-santi.css
@@ -135,7 +135,7 @@ img{
 
 .main-article{
     margin: 10px 5px;
-    background-color: #f2efe7;  
+    background-color: #f2f2f2;  
 }
 
 .main-title{
