Cambios en el login.html

--- a/views/login.html
+++ b/views/login.html
@@ -15,7 +15,7 @@
 <body>
     <header class="main-header">
         <div class="arriba">
-            <h3>¡3 , 6 y 12 CUOTAS SIN INTERES!</h3>
+            <h3>¡¡3 , 6 y 12 CUOTAS SIN INTERES!!</h3>
         </div>
         <div class="header-top-bar">
             <div class="contenedor-menu">
